# playground

./: CONTRIBUTING.md  Cargo.toml  README.md
game_of_life/: CREDITS.md  Cargo.toml  README.md
game_of_life/assets/shaders/: grid.wgsl
game_of_life/src/: consts.rs  grid.rs  main.rs  position.rs  simulation.rs  ui.rs
